--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,185 @@
-django>=3.1,<4.0
-django-heroku
-gunicorn
+aiogram==2.9
+aiohttp==3.6.2
+appdirs==1.4.4
+apyio==0.2.0
+asgiref==3.2.7
+async-timeout==3.0.1
+attrs==19.3.0
+Automat==0.8.0
+Babel==2.8.0
+beautifulsoup4==4.8.1
+certifi==2019.11.28
+cffi==1.13.2
+chardet==3.0.4
+chromedriver-py==87.0.4280.20
+click==7.1.2
+colorama==0.4.3
+constantly==15.1.0
+cryptography==2.8
+cssselect==1.1.0
+distlib==0.3.0
+dj-database-url==0.5.0
+Django==3.0.5
+django-grappelli==2.14.1
+djangorestframework==3.11.0
+elasticsearch==7.10.0
+facebook-sdk==3.1.0
+filelock==3.0.12
+gTTS==2.1.1
+gTTS-token==1.1.3
+hupper==1.10.2
+hyperlink==19.0.0
+idna==2.8
+image==1.5.32
+incremental==17.5.0
+jellyfish==0.8.2
+lib50==2.0.8
+lxml==4.4.2
+markdown2==2.3.9
+multidict==4.7.6
+parsel==1.5.2
+PasteDeploy==2.1.1
+pbr==5.4.5
+peewee==3.13.1
+pexpect==4.8.0
+Pillow==7.1.2
+pipenv==2018.11.26
+plaster==1.0
+plaster-pastedeploy==0.7
+playsound==1.2.2
+Protego==0.1.16
+psycopg2-binary==2.8.4
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.19
+PyDispatcher==2.0.5
+PyHamcrest==1.9.0
+pyobjc==6.2
+pyobjc-core==6.2
+pyobjc-framework-Accounts==6.2
+pyobjc-framework-AddressBook==6.2
+pyobjc-framework-AdSupport==6.2
+pyobjc-framework-AppleScriptKit==6.2
+pyobjc-framework-AppleScriptObjC==6.2
+pyobjc-framework-ApplicationServices==6.2
+pyobjc-framework-Automator==6.2
+pyobjc-framework-AVFoundation==6.2
+pyobjc-framework-AVKit==6.2
+pyobjc-framework-BusinessChat==6.2
+pyobjc-framework-CalendarStore==6.2
+pyobjc-framework-CFNetwork==6.2
+pyobjc-framework-CloudKit==6.2
+pyobjc-framework-Cocoa==6.2
+pyobjc-framework-Collaboration==6.2
+pyobjc-framework-ColorSync==6.2
+pyobjc-framework-Contacts==6.2
+pyobjc-framework-ContactsUI==6.2
+pyobjc-framework-CoreAudio==6.2
+pyobjc-framework-CoreAudioKit==6.2
+pyobjc-framework-CoreBluetooth==6.2
+pyobjc-framework-CoreData==6.2
+pyobjc-framework-CoreLocation==6.2
+pyobjc-framework-CoreMedia==6.2
+pyobjc-framework-CoreMediaIO==6.2
+pyobjc-framework-CoreML==6.2
+pyobjc-framework-CoreServices==6.2
+pyobjc-framework-CoreSpotlight==6.2
+pyobjc-framework-CoreText==6.2
+pyobjc-framework-CoreWLAN==6.2
+pyobjc-framework-CryptoTokenKit==6.2
+pyobjc-framework-DictionaryServices==6.2
+pyobjc-framework-DiscRecording==6.2
+pyobjc-framework-DiscRecordingUI==6.2
+pyobjc-framework-DiskArbitration==6.2
+pyobjc-framework-DVDPlayback==6.2
+pyobjc-framework-EventKit==6.2
+pyobjc-framework-ExceptionHandling==6.2
+pyobjc-framework-ExternalAccessory==6.2
+pyobjc-framework-FinderSync==6.2
+pyobjc-framework-FSEvents==6.2
+pyobjc-framework-GameCenter==6.2
+pyobjc-framework-GameController==6.2
+pyobjc-framework-GameKit==6.2
+pyobjc-framework-GameplayKit==6.2
+pyobjc-framework-ImageCaptureCore==6.2
+pyobjc-framework-IMServicePlugIn==6.2
+pyobjc-framework-InputMethodKit==6.2
+pyobjc-framework-InstallerPlugins==6.2
+pyobjc-framework-InstantMessage==6.2
+pyobjc-framework-Intents==6.2
+pyobjc-framework-IOSurface==6.2
+pyobjc-framework-iTunesLibrary==6.2
+pyobjc-framework-LatentSemanticMapping==6.2
+pyobjc-framework-LaunchServices==6.2
+pyobjc-framework-libdispatch==6.2
+pyobjc-framework-LocalAuthentication==6.2
+pyobjc-framework-MapKit==6.2
+pyobjc-framework-MediaAccessibility==6.2
+pyobjc-framework-MediaLibrary==6.2
+pyobjc-framework-MediaPlayer==6.2
+pyobjc-framework-MediaToolbox==6.2
+pyobjc-framework-Metal==6.2
+pyobjc-framework-MetalKit==6.2
+pyobjc-framework-ModelIO==6.2
+pyobjc-framework-MultipeerConnectivity==6.2
+pyobjc-framework-NaturalLanguage==6.2
+pyobjc-framework-NetFS==6.2
+pyobjc-framework-Network==6.2
+pyobjc-framework-NetworkExtension==6.2
+pyobjc-framework-NotificationCenter==6.2
+pyobjc-framework-OpenDirectory==6.2
+pyobjc-framework-OSAKit==6.2
+pyobjc-framework-Photos==6.2
+pyobjc-framework-PhotosUI==6.2
+pyobjc-framework-PreferencePanes==6.2
+pyobjc-framework-PubSub==6.2
+pyobjc-framework-QTKit==6.2
+pyobjc-framework-Quartz==6.2
+pyobjc-framework-SafariServices==6.2
+pyobjc-framework-SceneKit==6.2
+pyobjc-framework-ScreenSaver==6.2
+pyobjc-framework-ScriptingBridge==6.2
+pyobjc-framework-SearchKit==6.2
+pyobjc-framework-Security==6.2
+pyobjc-framework-SecurityFoundation==6.2
+pyobjc-framework-SecurityInterface==6.2
+pyobjc-framework-ServiceManagement==6.2
+pyobjc-framework-Social==6.2
+pyobjc-framework-SpriteKit==6.2
+pyobjc-framework-StoreKit==6.2
+pyobjc-framework-SyncServices==6.2
+pyobjc-framework-SystemConfiguration==6.2
+pyobjc-framework-UserNotifications==6.2
+pyobjc-framework-VideoSubscriberAccount==6.2
+pyobjc-framework-VideoToolbox==6.2
+pyobjc-framework-Vision==6.2
+pyobjc-framework-WebKit==6.2
+pyOpenSSL==19.1.0
+pyramid==1.10.5
+pyTelegramBotAPI==3.7.1
+pytz==2019.3
+PyYAML==5.3.1
+queuelib==1.5.0
+requests==2.22.0
+Scrapy==1.8.0
+selenium==3.141.0
+service-identity==18.1.0
+six==1.13.0
+soupsieve==1.9.5
+sqlparse==0.3.1
+stevedore==2.0.1
+submit50==3.0.2
+termcolor==1.1.0
+translationstring==1.4
+Twisted==19.10.0
+urllib3==1.25.7
+venusian==3.0.0
+virtualenv==20.0.21
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
+w3lib==1.21.0
+WebOb==1.8.6
+yarl==1.4.2
+zope.deprecation==4.4.0
+zope.interface==4.7.1
